# Tools

./: .gitignore  CMakeLists.txt  autoMutex.hpp
include/: autoMutex.hpp  log.hpp  strExt.hpp  threadExt.hpp  uuid.hpp  uuidExt.hpp
tests/: CMakeLists.txt
tests/log/: log_test.cpp
tests/strExt/: strExt_test.cpp
tests/threadExt/: threadExt_test.cpp
tests/uuid/: uuid_test.cpp
tests/uuidExt/: uuidExt_test.cpp
